add KCL details (where possible) to customise pages

--- a/episodes/files/commercial.Rmd
+++ b/episodes/files/commercial.Rmd
@@ -1,2 +1,3 @@
 <!-- Include information about your commercialisation team here. -->
 
+[King's Innovation Catalyst](https://www.kcl.ac.uk/research/kings-innovation-catalyst) provides support for translational research, industry partnerships, and commercialisation.
