--- a/episodes/files/dmpinfo.Rmd
+++ b/episodes/files/dmpinfo.Rmd
@@ -2,5 +2,5 @@
 
 <!-- This is where you can write information on your organisation's data management and data management plan webpage and support contacts. Replace the text below with anything you like, and it will appear in relevant places in the lessons. -->
 
-The University of Sheffield Library webpages have some further information about wrtiting a data management plan: https://www.sheffield.ac.uk/library/research-data-management/planning
+The King's library pages have information on [creating a Data Management Plan](https://www.kcl.ac.uk/researchsupport/managing/plan), which you can do via [dmp.kcl.ac.uk](https://dmp.kcl.ac.uk/). The library also runs a course on managing your research data - sign up [via Skillsforge](https://training.kcl.ac.uk/kcl/#he.dev/eventDetails,;em,id=6ba499f1-416c-46ee-8ecb-f804a9fc0312%20).
 
