--- a/episodes/files/DataSciCode.Rmd
+++ b/episodes/files/DataSciCode.Rmd
@@ -1,3 +1,3 @@
 <!-- Got any organisation information on where to learn R or Python? Does your institute run carpentries training or data science help? Include it below. -->
 
-Introductory training from The University of Sheffield for learning R can be found here: https://www.sheffield.ac.uk/mash/stats-resources/r
+e-Research run introductory programming courses - details are on [the e-Research docs](https://docs.er.kcl.ac.uk/training/). In addition, the [Centre for Research Staff Development](https://internal.kcl.ac.uk/crsd/courses/on-demand-learning) provides access to SAGE Campus online courses, including introductory programming courses for R and Python. You may also be able to access training through the [Health Sciences Doctoral Training Centre](https://emckclac.sharepoint.com/sites/KPRH/SitePages/Knowledge%20and%20Intellectual%20Abilities.aspx), [Hub for Applied Bioinformatics](https://hab.sites.er.kcl.ac.uk/training), or [Innovation Scholars](https://innovationscholars.er.kcl.ac.uk/).
