add notes explaining where the customisation files are referenced, to make it easier to check their inclusion

--- a/episodes/files/commercial.Rmd
+++ b/episodes/files/commercial.Rmd
@@ -1,3 +1,4 @@
 <!-- Include information about your commercialisation team here. -->
+<!-- Referenced in step7PublishPIDReuse.Rmd -->
 
 [King's Innovation Catalyst](https://www.kcl.ac.uk/research/kings-innovation-catalyst) provides support for translational research, industry partnerships, and commercialisation.
