--- a/episodes/files/notebooksDoco.Rmd
+++ b/episodes/files/notebooksDoco.Rmd
@@ -1,3 +1,4 @@
 <!-- Got any organisation information on where researchers can save documentation or notes on their research? This could be eLabNotebooks, documentation platforms/wikis etc? Even google docs or onedrive can be good to point out.  Include it below. -->
+<!-- Referenced in step4Doco.Rmd -->
 
 The [LabArchives](https://uk-mynotebook.labarchives.com/login) Electronic Lab Notebook is available to King's researchers as a centrally supported service. Training in how to make best use of it can be booked [via Skillsforge](https://training.kcl.ac.uk/kcl/#he/dev/eventDetails,;em,providerCode=LA,providerOrgAlias=kcl,number=2,;).
