--- a/episodes/files/prereg.Rmd
+++ b/episodes/files/prereg.Rmd
@@ -1,2 +1,2 @@
 <!-- Got any organisation information on preregistration or registering protocols? Include it below. -->
-
+<!-- Referenced in step3MethodStats.Rmd -->
