--- a/episodes/files/whereToFromHere.Rmd
+++ b/episodes/files/whereToFromHere.Rmd
@@ -1,2 +1,3 @@
 <!-- Does your institute have a Reproducibility club, ReproducibiliTea group or webpages on reproducibility? This is where to include it. Also add any further follow up information you would like to share. -->
+<!-- Referenced in wrapup.Rmd -->
 
