--- a/episodes/files/dataDeposit.Rmd
+++ b/episodes/files/dataDeposit.Rmd
@@ -1,3 +1,4 @@
 <!-- Include information about your organisational data repository here. -->
+<!-- Referenced in step7PublishPIDReuse.Rmd -->
 
 The [King’s Open Research Data System (KORDS)](https://www.kcl.ac.uk/researchsupport/managing/preserve) is our research data repository, providing long-term storage and access for datasets at project-end and supporting publications.
