--- a/episodes/files/endOfProjChecklist.Rmd
+++ b/episodes/files/endOfProjChecklist.Rmd
@@ -1,2 +1,3 @@
 <!-- Can you link to an internal 'what to do at the end of a project' checklist? Include it below. -->
+<!-- Referenced in step7PublishPIDReuse.Rmd -->
 
